made the form for the subscription section

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -19,6 +19,8 @@
     grid-column: 1 / -1;
     width: 100%;
 
+    @include hover (transform, scale(1.08));
+
     @include on-tablet {
       grid-column: 1 / 4;
     }
@@ -30,6 +32,8 @@
 
   &__image--medium {
     display: none;
+
+    @include hover (transform, scale(1.1));
 
     @include on-tablet {
       display: block;
@@ -46,6 +50,8 @@
   &__image--full {
     display: none;
 
+    @include hover (transform, scale(1.07));
+
     @include on-desktop {
       display: block;
       grid-column: span 8;
@@ -56,6 +62,8 @@
 
   &__image--small {
     display: none;
+
+    @include hover (transform, scale(1.12));
 
     @include on-desktop {
       display: block;
