--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,11 +5,7 @@ body {
 }
 
 body:has(aside:target) {
-  // overflow: hidden; /* not to scroll the page */
-
-  // overflow: unset;
-  // overflow: scroll;
-  // overflow: visible;
+  overflow: hidden;
 
   // opacity: 0.5;
 }
