--- a/src/styles/blocks/relevance.scss
+++ b/src/styles/blocks/relevance.scss
@@ -10,6 +10,8 @@
   &__image {
     width: 100%;
 
+    @include hover (transform, scale(1.1));
+
     @include on-desktop {
       width: 670px;
     }
