--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -24,6 +24,8 @@
   }
 
   &__wrapper {
+    color: #fff;
+
     @include on-tablet {
       display: flex;
       justify-content: space-between;
@@ -49,17 +51,6 @@
     }
   }
 
-  &__text {
-    @include on-tablet {
-      display: flex;
-      gap: 26px;
-    }
-
-    @include on-desktop {
-      gap: 30px;
-    }
-  }
-
   &__list {
     padding: 0;
     list-style: none;
@@ -75,7 +66,13 @@
     font-weight: 400;
     line-height: 150%;
 
+    @include on-tablet {
+      display: flex;
+      gap: 26px;
+    }
+
     @include on-desktop {
+      gap: 30px;
       margin-right: 100px;
     }
   }
@@ -98,18 +95,6 @@
     @include on-tablet {
       margin-top: 0;
     }
-
-    @include on-desktop {
-      // padding-top: 40px;
-      // padding: 40px 0;
-    }
-  }
-
-  &__time {
-    // font-family: "IBM Plex Sans", sans-serif;
-    // font-weight: 400;
-    // font-size: 14px;
-    // line-height: 150%;
   }
 
   &__bold {
@@ -147,6 +132,5 @@ aside:target {
   opacity: 1;
 
   // visibility: visible;
-
 }
 
