--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,6 +1,6 @@
 .subscription {
   padding: 88px 0;
-  
+
   background-image: url(../images/subscription/subscription-bg.png);
   background-repeat: no-repeat;
   background-size: auto;
@@ -79,17 +79,67 @@
   }
 
   &__form {
+    display: flex;
     grid-column: 1 / -1;
-    width: 100%;
 
-    // height: 100%;
+    // box-sizing: border-box;
+    // width: 100%;
+    // height: 50px;
+
 
     @include on-tablet {
       grid-column: 2 / -2;
+      gap: 16px;
     }
 
     @include on-desktop {
       grid-column: 4 / 10;
+      gap: 30px;
     }
+  }
+
+  &__input {
+    box-sizing: border-box;
+    width: 82%;
+    height: 50px;
+    border: none;
+    padding: 24px;
+    cursor: pointer;
+
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 100%;
+    color: #687480;
+
+    @include on-tablet {
+      height: 70px;
+    }
+
+    @include on-desktop {
+      min-width: 82%;
+      padding: 32px;
+    }
+  }
+
+  &__button {
+    // display: inline-block;
+    // display: flex;
+
+    width: 50px;
+    border: none;
+    padding: 0;
+    background-color: #F14A27;
+    cursor: pointer;
+
+    @include on-tablet {
+      width: 70px;
+      height: 70px;
+    }
+  }
+
+  &__arrow {
+    width: 24px;
+    height: 24px;
   }
 }
