updated the tickets link

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -16,8 +16,8 @@
 
   &__menu {
     position: absolute;
-    left: 20px;
     top: 27px;
+    left: 20px;
 
     @include on-tablet {
       top: 39px;
@@ -34,12 +34,13 @@
   &__logo {
     position: absolute;
     left: 43%;
-
     margin-top: 9px;
 
+    @include hover(transform, scale(1.1));
+
     @include on-tablet {
-      margin-top: 15px;
       left: 60%;
+      margin-top: 15px;
     }
 
     @include on-desktop {
@@ -57,8 +58,9 @@
     @include on-tablet {
       display: flex;
       flex-direction: row-reverse;
+
       width: 49%;
-      min-height: 384px;
+
       height: 100%;
     }
 
@@ -94,7 +96,6 @@
 
     @include on-tablet {
       margin: 127px 0 38px;
-
       font-size: 54px;
       line-height: 120%;
       text-align: start;
@@ -107,14 +108,14 @@
   }
 
   &__tickets {
-    box-sizing: border-box;
-
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+
+    box-sizing: border-box;
+    border: 1px solid #1A5A4C;
 
     background-color: #fff;
-    border: 1px solid #1A5A4C;
 
     @include on-tablet {
       width: 270px;
@@ -127,22 +128,41 @@
 
   &__tickets-text {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 
     width: 100%;
     height: 48px;
-    text-decoration: none;
-    background-color: #fff;
 
     font-family: "IBM Plex Sans", sans-serif;
-    font-weight: 500;
     font-size: 16px;
+    font-weight: 500;
     line-height: 100%;
     color: #0F0E08;
+    text-decoration: none;
+
+    background-color: #fff;
 
     @include on-tablet {
       width: 70%;
+    }
+  }
+
+  &__tickets-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    box-sizing: border-box;
+    width: 50px;
+    height: 48px;
+    border: none;
+
+    background-color: #1A5A4C;
+
+    @include on-tablet {
+      width: 70px;
+      height: 70px;
     }
   }
 
@@ -150,14 +170,13 @@
     box-sizing: border-box;
     width: 50px;
     height: 48px;
-    background-color: #1A5A4C;
     border: none;
+
+    background-color: #1A5A4C;
 
     @include on-tablet {
       width: 70px;
       height: 70px;
-      // top: 39px;
-      // left: 34px;
     }
   }
 
