--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -5,13 +5,16 @@
   top: 0;
   right: 0;
   left: 0;
+  bottom: 0;
 
-  box-sizing: border-box;
-  height: 399px;
-  padding: 27px 0;
+  // box-sizing: border-box;
+  // height: 399px;
+  // padding: 27px 0;
+
+  background-color: #838786;
 
   opacity: 0;
-  background-color: #1A5A4C;
+
 
   @include on-tablet {
     height: 225px;
@@ -21,6 +24,13 @@
   @include on-desktop {
     height: 233px;
     padding: 40px 0 48px;
+  }
+
+  &__container {
+    height: 399px;
+    padding: 27px 0;
+
+    background-color: #1A5A4C;
   }
 
   &__wrapper {
@@ -130,7 +140,5 @@
 aside:target {
   pointer-events: all;
   opacity: 1;
-
-  // visibility: visible;
 }
 
