--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   scroll-behavior: smooth;
   margin: 0;
@@ -7,7 +11,7 @@ body {
 body:has(aside:target) {
   overflow: hidden;
 
-  // opacity: 0.5;
+  
 }
 
 .section__title {
