made the responsible aside blok

--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -4,41 +4,36 @@
   position: fixed;
   top: 0;
   right: 0;
-  left: 0;
   bottom: 0;
-
-  // box-sizing: border-box;
-  // height: 399px;
-  // padding: 27px 0;
-
-  background-color: #838786;
+  left: 0;
 
   opacity: 0;
+  background-color: rgba(0, 0, 0, 0.7);
 
-
-  @include on-tablet {
-    height: 225px;
-    padding-top: 39px;
-  }
+  // transition: all 0.5s easy;
 
   @include on-desktop {
-    height: 233px;
-    padding: 40px 0 48px;
+    max-width: 1440px;
+    margin-inline: auto;
   }
 
   &__container {
-    height: 399px;
-    padding: 27px 0;
-
-    background-color: #1A5A4C;
+    color: #fff;
   }
 
   &__wrapper {
-    color: #fff;
+    padding: 27px 20px;
+    background-color: #1A5A4C;
 
     @include on-tablet {
       display: flex;
+      align-items: flex-start;
       justify-content: space-between;
+      padding: 39px 34px;
+    }
+
+    @include on-desktop {
+      padding: 40px 55px 48px;
     }
   }
 
@@ -57,6 +52,7 @@
     opacity: 50%;
 
     @include on-tablet {
+      height: 145px;
       margin: 0;
     }
   }
@@ -130,15 +126,13 @@
     @include on-desktop {
       width: 170px;
     }
-
-    @media(min-width: 1440px) {
-      display: none;
-    }
   }
 }
 
 aside:target {
   pointer-events: all;
   opacity: 1;
+
+  // transform: translateX(0);
 }
 
