--- a/src/styles/blocks/transition.scss
+++ b/src/styles/blocks/transition.scss
@@ -1,6 +1,10 @@
 .transition {
-  // position: relative;
   display: block;
+
+  @include on-desktop {
+    max-width: 1440px;
+    margin-inline: auto;
+  }
 
   &__wrapper {
     position: relative;
