--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -32,11 +32,17 @@
 
   &__logo {
     display: flex;
+
+    @include hover(transform, scale(1.4));
   }
 
   &__icons {
     display: flex;
     gap: 20px;
+  }
+
+  &__icon {
+    @include hover(transform, scale(1.4));
   }
 
   // region informations
