--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -21,6 +21,8 @@
     top: 27px;
     left: 20px;
 
+    @include hover(transform, scale(1.4));
+
     @include on-tablet {
       top: 39px;
       left: 34px;
@@ -38,7 +40,7 @@
     left: 43%;
     margin-top: 9px;
 
-    @include hover(transform, scale(1.1));
+    @include hover(transform, scale(1.4));
 
     @include on-tablet {
       left: 60%;
@@ -112,10 +114,12 @@
     align-items: center;
     justify-content: space-between;
 
+    cursor: pointer;
     box-sizing: border-box;
     border: 1px solid #1A5A4C;
 
     background-color: #fff;
+    text-decoration: none;
 
     @include on-tablet {
       width: 270px;
@@ -131,7 +135,7 @@
     align-items: center;
     justify-content: center;
 
-    width: 100%;
+    width: 90%;
     height: 48px;
 
     font-family: "IBM Plex Sans", sans-serif;
@@ -139,7 +143,6 @@
     font-weight: 500;
     line-height: 100%;
     color: #0F0E08;
-    text-decoration: none;
 
     background-color: #fff;
 
@@ -153,20 +156,6 @@
     align-items: center;
     justify-content: center;
 
-    box-sizing: border-box;
-    width: 50px;
-    height: 48px;
-    border: none;
-
-    background-color: #1A5A4C;
-
-    @include on-tablet {
-      width: 70px;
-      height: 70px;
-    }
-  }
-
-  &__button {
     box-sizing: border-box;
     width: 50px;
     height: 48px;
