updated header for 640px and add smooth scroll

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -10,8 +11,6 @@ body {
 
 body:has(aside:target) {
   overflow: hidden;
-
-  
 }
 
 .section__title {
