--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -63,7 +63,8 @@
       display: flex;
       flex-direction: row-reverse;
       width: 49%;
-      height: 100%;
+
+      // height: 100%;
     }
 
     @include on-desktop {
@@ -73,6 +74,7 @@
 
   &__art {
     padding-inline: 20px;
+    padding-bottom: 19px;
 
     @include on-tablet {
       width: 49%;
@@ -98,7 +100,7 @@
 
     @include on-tablet {
       margin: 127px 0 38px;
-      font-size: 54px;
+      font-size: 44px;
       line-height: 120%;
       text-align: start;
     }
