updated header for 640px and add smooth scroll

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -73,8 +73,7 @@
   }
 
   &__art {
-    padding-inline: 20px;
-    padding-bottom: 19px;
+    padding: 0 20px 19px;
 
     @include on-tablet {
       width: 49%;
@@ -120,6 +119,7 @@
 
     box-sizing: border-box;
     border: 1px solid #1A5A4C;
+
     text-decoration: none;
 
     background-color: #fff;
