did the first to third points

--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -99,6 +99,7 @@
     width: 82%;
     height: 50px;
     padding: 24px;
+    outline: none;
     border: none;
 
     font-family: Montserrat, sans-serif;
