made the points from mentor

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -83,6 +83,11 @@
     }
   }
 
+  &__contact-link {
+    text-decoration: none;
+    color: #0F0E08;
+  }
+
   &__title {
     margin: 40px 0 20px;
 
@@ -175,7 +180,7 @@
       grid-column: 8 / -2;
     }
 
-    &__list {
+    &-list {
       margin: 0;
       padding: 0;
 
@@ -185,7 +190,7 @@
       line-height: 100%;
     }
 
-    &__item {
+    &-item {
       width: 130px;
       list-style: none;
 
@@ -198,11 +203,11 @@
       }
     }
 
-    &__item:first-child {
+    &-item:first-child {
       margin-bottom: 24px;
     }
 
-    &__link {
+    &-link {
       color: #0F0E08;
       text-decoration: none;
     }
