add hover effect

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -86,6 +86,13 @@
   &__contact-link {
     color: #0F0E08;
     text-decoration: none;
+
+    @include hover(transform, scale(1.2));
+  }
+
+  &__contact-link:hover {
+    color: #ea8e17;
+    transform: scaleX(1.2);
   }
 
   &__title {
